update appointment crud